# NerA

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_tools.py
ner_a_mcp/: server.py
ner_a_mcp/logic/: dialects.py  ocr.py  sharia.py  trust.py
